FullSb1-27-apr-15/src/objects/Five9_Calls__c.object
<CustomObject>
    <fields>
        <fullName>After_Call_Work_time__c</fullName>
        <label>After Call Work Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Date__c</fullName>
        <label>Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Duration__c</fullName>
        <label>Call Duration</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Result__c</fullName>
        <label>Call Result</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <label>Campus</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Residence__c</fullName>
        <label>Country of Residence</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9_campaign__c</fullName>
        <label>Five9 campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handle_Time__c</fullName>
        <label>Handle Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interview_Date_Booked__c</fullName>
        <label>Interview Date Booked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interview_Date__c</fullName>
        <label>Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interview_Status__c</fullName>
        <label>Interview Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <label>LeadSource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Source__c</fullName>
        <label>Marketing Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outsource_Telemarketer_Company__c</fullName>
        <label>Outsource Telemarketer Company</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outsource_Telemarketer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outsource Telemarketer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telesales_Caller__c</fullName>
        <label>Telesales Caller</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Source__c</fullName>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>task_whoid__c</fullName>
        <label>task_whoid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Five9 Calls</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>task_whoid__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Five9 Calls Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Five9 Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>